Rough English translation

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
 <!--				<div class='GanttBoxMnu__lbl' data-mul=.5 width=25 height=25>Date:</div>-->
 				<select class="GanttBoxMnu__lst_root xs-">
 					<option value="-nav" selected disabled hidden>☰</option>
-					<option value="-new"><b>Новый</b></option>
+					<option value="-new"><b>New</b></option>
 <!--					<option value="-save"><b>Сохранить</b></option>-->
 <!--					<option value="-saveAs"><b>Сохранить как...</b></option>-->
 					<option value="-" disabled>———————</option>
@@ -42,19 +42,19 @@
 				<div class="GanttBoxWrap">
 					<div class="GanttBoxPop__lbl_title">Debug обзор модельного окна. Раскоментируйте в index.css .GanttBoxPop[style='display:none']</div>
 					<div class="GanttBoxPop__grp_dte xs-12">
-						<div class="GanttBoxPop__lbl_date xs-3-r-1">Новый период:</div>
+						<div class="GanttBoxPop__lbl_date xs-3-r-1">Time period:</div>
 						<input class="GanttBoxPop__prop_from xs-r-1" type=date>
 						<input class="GanttBoxPop__prop_to xs-r-1" type=date>
 					</div>
 					<div class="GanttBoxPop__grp_opt hide">
-						<div class=xs-10-r-1><input type=radio name=opt value=parallel checked class="GanttBoxPop__opt_parallel">Добавить параллельной задачей</div>
-						<div class=xs-10-r-1><input type=radio name=opt value=expand class="GanttBoxPop__opt_expand">Раздвинуть имеющийся график</div>
-						<div class=xs-10-r-1><input type=radio name=opt value=insert class="GanttBoxPop__opt_insert">Вписать в свободный промежуток</div>
+						<div class=xs-10-r-1><input type=radio name=opt value=parallel checked class="GanttBoxPop__opt_parallel">Add as parallel task</div>
+						<div class=xs-10-r-1><input type=radio name=opt value=expand class="GanttBoxPop__opt_expand">Split existing task</div>
+						<div class=xs-10-r-1><input type=radio name=opt value=insert class="GanttBoxPop__opt_insert">Add into free space</div>
 					</div>
 					<div class="GanttBoxPop__grp_cap xs-12">
-						<div class="GanttBoxPop__lbl_caption xs-3-r-1">Название:</div>
+						<div class="GanttBoxPop__lbl_caption xs-3-r-1">Title:</div>
 						<input class="GanttBoxPop__prop_caption xs-7-r-1" type="text">
-						<div class="GanttBoxPop__lbl_description xs-3-r-1">Описание:</div>
+						<div class="GanttBoxPop__lbl_description xs-3-r-1">Description:</div>
 						<textarea class="GanttBoxPop__prop_description xs-7-r-1"></textarea>
 					</div>
 					<div class="xs-12">
